# pyrefly-issue-1825-mre

./: LICENSE  README.md  main.py  pyproject.toml  test1.py  test2.py  test3.py  test4.py  test_converter.py  test_factory_defaults.py  test_factory_defaults_control.py  test_field_default_decorator.py  test_field_validator_decorator.py  test_frozen_mutable.py  test_validator_builtin.py  test_validator_callable.py
